--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             <span class="author-block">
               <a href="https://vision.sjtu.edu.cn/">Chao Ma</a>,</span>
             <span class="author-block">
-                <a>Xiaokang Yang</a>
-            </span>
+                <a>Xiaokang Yang</a>,</span>
             <span class="author-block">
               <a herf="https://www.imperial.ac.uk/people/s.zafeiriou">Stefanos Zafeiriou</a>
             </span>
@@ -112,7 +111,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Comming Soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
             </div>
@@ -127,7 +126,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img class="img-responsive" src="./static/images/teaser.pdf" alt="Teaser">
+      <img class="img-responsive" src="./static/images/teaser.png" alt="Teaser">
       <h2 class="subtitle has-text-justified">
         <span class="PBIDR">We introduce a single-facial-image geometric detail recovery algorithm. Our
           method generates complete high-fidelity texture maps from occluded facial images,
@@ -173,7 +172,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Pipeline</h2>
-        <img class="img-responsive" src="./static/images/pipeline.pdf" alt="Pipeline">
+        <img class="img-responsive" src="./static/images/pipeline.png" alt="Pipeline">
         <div class="content has-text-justified">
         <span class="Pipeline">Overview of our method. Left: we perform a robust texture completion, utilizing StyleGANv2 to repair both externally- and self-occluded regions as preprocessing. Right: Based on a coarse 3DMM fitting, we render a multi-view dataset and use an implicit signed distance function and a novel physically-based implicit differentiable renderer (PBIDR) to improve the coarse shape. Based on the self-supervised decomposition of diffuse normal and specular normal, we obtain a detailed facial geometry as well as approximate diffuse albedo, diffuse shading and specular shading.
         </div>
