--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class="author-block">
               <a href="https://vision.sjtu.edu.cn/">Chao Ma</a>,</span>
             <span class="author-block">
-                <a>Xiaokang Yang</a>,</span>
+                Xiaokang Yang,</span>
             <span class="author-block">
               <a herf="https://www.imperial.ac.uk/people/s.zafeiriou">Stefanos Zafeiriou</a>
             </span>
