--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             <span class="author-block">Huawei CBG</span>
           </div>
 
+          <div class="is-size-5 has-text-weight-bold">
+              FG 2023
+          </div>
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
