--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="author-block">Huawei CBG</span>
           </div>
 
-          <div class="is-size-5 has-text-weight-bold">
+          <div class="is-size-5 publication-authors">
               FG 2023
           </div>
 
